feat: setup service endpoints